syntax = "proto2";

package classification.protos;

//import "object_detection/protos/eval.proto";
import "classification/protos/input_reader.proto";
import "classification/protos/model.proto";
//import "object_detection/protos/train.proto";

// Convenience message for configuring a training and eval pipeline. Allows all
// of the pipeline parameters to be configured from one file.
message TrainEvalPipelineConfig {
  //optional DetectionModel model = 1;
  //optional TrainConfig train_config = 2;
  optional Model model = 1;
  optional InputReader train_input_reader = 2;
  //optional EvalConfig eval_config = 4;
  //optional InputReader eval_input_reader = 5;
}
